@@ -12,6 +12,7 @@ Release 1.5.2 (2013-03-??)
 - merged GH #91: Improve SQLite multi-threaded use (by Rangel Reale)
 - merged GH #86: Invalid pointers to vector internals (by Adrian Imboden)
 - automatic library initialization macros
+- fixed GH #110: WebSocket accept() fails when Connection header contains multiple tokens
 
 Release 1.5.1 (2013-01-11)
 ==========================
